--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,15 @@
 {
 	"manifest_version": 2,
-	"name": "LinkHay QuickView",
+	"name": "AnhStock Fast Downloader",
 	"version": "1.1.16",
-	"description": "Cho phép xem nhanh trong LinkHay.com",
+	"description": "Công cụ tải ảnh Stock từ anhstock.com",
 	"icons": {"192": "icon.png"},
 	"permissions": [
 		"tabs", "contextMenus", "*://*/*"
 	],
 	"browser_action": {
 		"default_icon": "icon.png",
-		"default_title": "Bấm để gửi tin",
+		"default_title": "Bấm để gửi tin 33333",
 		"default_popup": "popup.html"
 	},
 	"background": {
@@ -23,15 +23,16 @@
 	"content_scripts":
 	[
 		{
-			"matches": ["*://*.linkhay.com/*"],
+			"matches": ["*://*.linkhay.com/*", "*://*.istockphoto.com/*", "*://*.123rf.com/*", "*://*.shutterstock.com/*"],
 			"css": ["linkhay.css"],
 			"js": [
 				"jquery-3.2.1.min.js"
 			],
+			"all_frames":true,
 			"run_at" : "document_start"
 		},
 		{
-			"matches": ["*://*.linkhay.com/*"],
+			"matches": ["*://*.linkhay.com/*", "*://*.istockphoto.com/*", "*://*.123rf.com/*", "*://*.shutterstock.com/*"],
 			"js": [
 				"util.js",
 				"sticker.js",
@@ -42,6 +43,7 @@
 				"improve.js",
 				"linkhay.js"
 			],
+			"all_frames":true,
 			"run_at" : "document_end"
 		}
 	]
