--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
 	"description": "Công cụ tải ảnh Stock từ anhstock.com",
 	"icons": {"192": "icon.png"},
 	"permissions": [
-		"tabs", "contextMenus", "*://*/*"
+		"tabs", "storage", "contextMenus", "*://*/*"
 	],
 	"browser_action": {
 		"default_icon": "icon.png",
@@ -13,18 +13,19 @@
 		"default_popup": "popup.html"
 	},
 	"background": {
-		"scripts": ["background.js"],
+		"scripts": ["hot-reload.js","background.js"],
 		"persistent": false
 	},
 	"web_accessible_resources": [
-		"linkhay.css",
+		"css/*",
+		"icon.png",
 		"stickers/*"
 	  ],
 	"content_scripts":
 	[
 		{
 			"matches": ["*://*.linkhay.com/*", "*://*.istockphoto.com/*", "*://*.123rf.com/*", "*://*.shutterstock.com/*"],
-			"css": ["linkhay.css"],
+			"css": ["css/linkhay.css"],
 			"js": [
 				"jquery-3.2.1.min.js"
 			],
