--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,7 @@
 		"default_popup": "popup.html"
 	},
 	"background": {
-		"scripts": ["hot-reload.js","background.js"],
+		"scripts": ["background.js"],
 		"persistent": false
 	},
 	"web_accessible_resources": [
